// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentComponent [snapshot] should render LTR layout 1`] = `
<app-agent
  agent={[Function Object]}
  layout={[Function String]}
>
  <div
    class="card"
  >
    
    <h4>
      Velvet Thunder
    </h4>
    
    <button
      class="primary"
    >
      Hire
    </button>
  </div>
</app-agent>
`;

exports[`AgentComponent [snapshot] should render RTL layout 1`] = `
<app-agent
  agent={[Function Object]}
  layout={[Function String]}
>
  <div
    class="card"
  >
    
    <button
      class="primary"
    >
      Hire
    </button>
    
    <h4>
      Velvet Thunder
    </h4>
  </div>
</app-agent>
`;

exports[`AgentComponent [snapshot] should render no layout mode 1`] = `
<app-agent
  agent={[Function Object]}
>
  <div
    class="card"
  >
    
    <h4>
      Velvet Thunder
    </h4>
    
    <button
      class="primary"
    >
      Hire
    </button>
  </div>
</app-agent>
`;
